fix icons non visibili e modifica angular.json

--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -10,4 +10,5 @@ img {
 ul {
     margin-bottom: 0px;
     margin-top: 2px;
+    list-style: unset;
 }
